<resources>
    <string name="app_name">Bhadra Homeopathy</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Phone No / Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_forgot_pwd">Forgot Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Phone no is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="forgot_Password">"Submit"</string>
    <string name="email">"Registered Email Id"</string>
</resources>
